[project]
name = "brownhat"
authors = [{ name = "Brown Hat Academy", email = "com.popa@gmail.com" }]
description = "Brown Hat Academy — custom Frappe LMS extensions"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "brownhat"
