[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brownhat"
version = "0.1.1"
authors = [{ name = "Brown Hat Academy", email = "com.popa@gmail.com" }]
description = "Brown Hat Academy — custom Frappe LMS extensions"
requires-python = ">=3.10"
readme = "README.md"
dependencies = []
